feat: add base structure to html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Mykhailo Artemenko | CV</title>
   </head>
   <body>
-    Hello world!
+    <header class="header">
+      <div class="container header__container">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__list-item">
+              <a href="" class="nav__list-link"></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="container main__container">
+
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container footer__container">
+
+      </div>
+    </footer>
   </body>
 </html>
