feat: add photo, links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,35 @@
 
     <main class="main">
       <div class="container main__container">
+        <section class="main__titles">
+          <h1>Mykhailo Artemenko</h1>
+          <h2>Aspiring Frontend developer</h2>
+        </section>
 
+        <section class="main__photo">
+          <img src="./images/photo.png" alt="My Photo | Mykhailo Artemenko">
+        </section>
+
+        <section class="main__contacts">
+          <ul class="contacts">
+            <li class="contacts__item">
+              Telephone:
+              <a class="contacts__link" href="tel:+389999999999">+389999999999</a>
+            </li>
+            <li class="contacts__item">
+              E-mail:
+              <a class="contacts__link" href="mailto:artemenko.mik@gmail.com">artemenko.mik@gmail.com</a>
+            </li>
+            <li class="contacts__item">
+              Telegram:
+              <a class="contacts__link" href="https://t.me/domino_sl">@Domino_Sl</a>
+            </li>
+            <li class="contacts__item">
+              Linkedin:
+              <a class="contacts__link" href="https://www.linkedin.com/in/mykhailo-artemenko/">Mykhailo Artemenko</a>
+            </li>
+          </ul>
+        </section>
       </div>
     </main>
 
