feat: fill out information

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </section>
 
         <section class="main__contacts">
+          <h3 class="main__title">
+            Contacts:
+          </h3>
           <ul class="contacts">
             <li class="contacts__item">
               Telephone:
@@ -47,6 +50,72 @@
             <li class="contacts__item">
               Linkedin:
               <a class="contacts__link" href="https://www.linkedin.com/in/mykhailo-artemenko/">Mykhailo Artemenko</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="main__about about">
+          <h3 class="main__title">
+            Professional Summary (According to chatGPT):
+          </h3>
+          <p class="about__text">
+            Analytical and versatile professional with a strong interest in technology, scientific methods, and self-improvement.<br>
+            Experienced in working with tools like Git, and knowledgeable in both software and engineering contexts.<br>
+            Demonstrates strong problem-solving abilities, an eagerness to learn, and a commitment to precision and continuous development.<br>
+            Balances technical insight with creative thinking, and approaches challenges with curiosity, resilience, and integrity.
+          </p>
+
+        </section>
+
+        <section class="main__skills skills">
+          <h3 class="main__title">
+            Skills and Proficiency:
+          </h3>
+
+          <ul class="skills__list">
+            <li class="skills__list-item">
+              HTML5, CSS3
+            </li>
+            <li class="skills__list-item">
+              JavaScript Basics
+            </li>
+            <li class="skills__list-item">
+              Git, GitHub
+            </li>
+            <li class="skills__list-item">
+              VS Code
+            </li>
+          </ul>
+        </section>
+
+        <section class="main__code code">
+          <h3 class="main__title">
+            Code Example:
+          </h3>
+          <code>
+            <pre>
+  function toNumberArray(stringarray) {
+    return stringarray.map(n => +n)
+  }
+            </pre>
+          </code>
+        </section>
+
+        <section class="main__languages">
+          <ul class="languages">
+            <li class="languages__item">
+              English - Advanced (according to the online test at
+                <a href="www.EFset.org"><img src="./images/efset-logo.png" alt="Efset logo"></a>)
+                <img src="./images/english-level.jpg" alt="English test result: Advanced">
+            </li>
+            <li class="languages__item">
+              Russian - Native
+            </li>
+            <li class="languages__item">
+              Ukrainian - Native
+            </li>
+            <li class="languages__item">
+              Czech - Basic
             </li>
           </ul>
         </section>
