fix: add languages title

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         </section>
 
         <section class="main__languages">
+          <h3 class="main__title">
+            Languages:
+          </h3>
           <ul class="languages">
             <li class="languages__item">
               English - Advanced (according to the online test at
