--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
     <title>Mykhailo Artemenko | CV</title>
   </head>
 
@@ -121,7 +122,7 @@
           </p>
 
           <pre>
-              <code>
+              <code  class="code__code">
     function toNumberArray(stringarray) {
       return stringarray.map(n => +n)
     }
@@ -155,9 +156,15 @@
 
     <footer class="footer">
       <div class="container footer__container">
-        <p>&#169 2025</p>
-        <a href="https://github.com/DominoSl">DominoSl</a>
-        <a href="https://rs.school/courses/javascript-ru"><img src="./images/logo-rsschool.png" alt="RsSchool logo"></a>
+        <p class="footer__link">&#169 2025</p>
+        <a class="footer__link" href="https://github.com/DominoSl">DominoSl</a>
+        <a class="footer__link" href="https://rs.school/courses/javascript-ru">
+          <img
+            class="footer__image"
+            src="./images/logo-rsschool.png"
+            alt="RsSchool logo"
+          >
+        </a>
       </div>
     </footer>
   </body>
