--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="page" lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,43 +36,40 @@
         <div class="introduction">
           <section class="introduction__titles">
             <h1 class="introduction__title">Mykhailo <span>
-              Artemenko
-            </span>
-          </h1>
+                Artemenko
+              </span>
+            </h1>
             <h2 class="introduction__title">Aspiring Frontend developer</h2>
           </section>
 
           <section class="introduction__photo-wrap">
             <h3 class="main__title main__title--hidden">My Photo</h3>
-            <img
-              class="introduction__photo"
-              src="./images/photo.png"
-              alt="My Photo | Mykhailo Artemenko">
-            </section>
-    
-            <section id="contacts" class="main__contacts main__section introduction__contacts">
-              <h3 class="main__title">
-                Contacts:
-              </h3>
-              <ul class="contacts">
-                <li class="contacts__item">
-                  Telephone:
-                  <a class="contacts__link" href="tel:+389999999999">+389999999999</a>
-                </li>
-                <li class="contacts__item">
-                  E-mail:
-                  <a class="contacts__link" href="mailto:artemenko.mik@gmail.com">artemenko.mik@gmail.com</a>
-                </li>
-                <li class="contacts__item">
-                  Telegram:
-                  <a class="contacts__link" href="https://t.me/domino_sl">@Domino_Sl</a>
-                </li>
-                <li class="contacts__item">
-                  Linkedin:
-                  <a class="contacts__link" href="https://www.linkedin.com/in/mykhailo-artemenko/">Mykhailo Artemenko</a>
-                </li>
-              </ul>
-            </section>
+            <img class="introduction__photo" src="./images/photo.png" alt="My Photo | Mykhailo Artemenko">
+          </section>
+
+          <section id="contacts" class="main__contacts main__section introduction__contacts">
+            <h3 class="main__title">
+              Contacts:
+            </h3>
+            <ul class="contacts">
+              <li class="contacts__item">
+                Telephone:
+                <a class="contacts__link" href="tel:+389999999999">+389999999999</a>
+              </li>
+              <li class="contacts__item">
+                E-mail:
+                <a class="contacts__link" href="mailto:artemenko.mik@gmail.com">artemenko.mik@gmail.com</a>
+              </li>
+              <li class="contacts__item">
+                Telegram:
+                <a class="contacts__link" href="https://t.me/domino_sl">@Domino_Sl</a>
+              </li>
+              <li class="contacts__item">
+                Linkedin:
+                <a class="contacts__link" href="https://www.linkedin.com/in/mykhailo-artemenko/">Mykhailo Artemenko</a>
+              </li>
+            </ul>
+          </section>
         </div>
 
         <section id="about" class="main__about about main__section">
@@ -87,7 +85,6 @@
             Balances technical insight with creative thinking, and approaches challenges with curiosity, resilience, and
             integrity.
           </p>
-
         </section>
 
         <section id="skills" class="main__skills skills main__section">
@@ -116,10 +113,11 @@
             Code Example:
           </h3>
 
+          <h4>
+            Convert an array of strings to array of numbers
+          </h4>
+
           <p class="code__task">
-            <h4>
-              Convert an array of strings to array of numbers
-            </h4>
             Oh no! Some really funny web dev gave you a sequence of
             numbers from his API response as an sequence of strings! You need to cast the whole array to the correct type.
             Create the function that takes as a parameter a sequence of numbers represented as strings and outputs a
@@ -127,12 +125,12 @@
           </p>
 
           <pre>
-              <code  class="code__code">
-    function toNumberArray(stringarray) {
-      return stringarray.map(n => +n)
-    }
-              </code>
-            </pre>
+                <code  class="code__code">
+      function toNumberArray(stringarray) {
+        return stringarray.map(n => +n)
+      }
+                </code>
+              </pre>
         </section>
 
         <section id="languages" class="main__languages main__section">
@@ -160,16 +158,13 @@
 
     <footer class="footer">
       <div class="container footer__container">
-        <p class="footer__link">&#169 2025</p>
+        <p class="footer__link">&#169; 2025</p>
         <a class="footer__link" href="https://github.com/DominoSl">DominoSl</a>
         <a class="footer__link" href="https://rs.school/courses/javascript-ru">
-          <img
-            class="footer__image"
-            src="./images/logo-rsschool.png"
-            alt="RsSchool logo"
-          >
+          <img class="footer__image" src="./images/logo-rsschool.png" alt="RsSchool logo">
         </a>
       </div>
     </footer>
   </body>
+
 </html>
