fix: slight fixes x2

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <pre>
                 <code  class="code__code">
       function toNumberArray(stringarray) {
-        return stringarray.map(n => +n)
+        return stringarray.map(n =&gt; +n)
       }
                 </code>
               </pre>
