--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
               <a href="#about" class="nav__list-link">About</a>
             </li>
             <li class="nav__list-item">
+              <a href="#languages" class="nav__list-link">Languages</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#education" class="nav__list-link">Education</a>
+            </li>
+            <li class="nav__list-item">
               <a href="#code" class="nav__list-link">Code Example</a>
             </li>
             <li class="nav__list-item">
-              <a href="#languages" class="nav__list-link">Languages</a>
+              <a href="#projects" class="nav__list-link">Done projects</a>
             </li>
           </ul>
         </nav>
@@ -35,22 +41,19 @@
       <div class="container main__container">
         <div class="introduction">
           <section class="introduction__titles">
-            <h1 class="introduction__title">Mykhailo <span>
-                Artemenko
-              </span>
-            </h1>
+            <h1 class="introduction__title">Mykhailo <span>Artemenko</span></h1>
             <h2 class="introduction__title">Aspiring Frontend developer</h2>
           </section>
 
           <section class="introduction__photo-wrap">
-            <h3 class="main__title main__title--hidden">My Photo</h3>
+            <h2 class="main__title main__title--hidden">My Photo</h2>
             <img class="introduction__photo" src="./images/photo.png" alt="My Photo | Mykhailo Artemenko">
           </section>
 
           <section id="contacts" class="main__contacts main__section introduction__contacts">
-            <h3 class="main__title">
+            <h2 class="main__title">
               Contacts:
-            </h3>
+            </h2>
             <ul class="contacts">
               <li class="contacts__item">
                 Telephone:
@@ -73,9 +76,9 @@
         </div>
 
         <section id="about" class="main__about about main__section">
-          <h3 class="main__title">
+          <h2 class="main__title">
             Professional Summary (According to chatGPT):
-          </h3>
+          </h2>
           <p class="about__text">
             Analytical and versatile professional with a strong interest in technology, scientific methods, and
             self-improvement.<br>
@@ -88,9 +91,9 @@
         </section>
 
         <section id="skills" class="main__skills skills main__section">
-          <h3 class="main__title">
+          <h2 class="main__title">
             Skills and Proficiency:
-          </h3>
+          </h2>
 
           <ul class="skills__list">
             <li class="skills__list-item">
@@ -108,14 +111,49 @@
           </ul>
         </section>
 
-        <section id="code" class="main__code code main__section">
-          <h3 class="main__title">
-            Code Example:
-          </h3>
+        <section id="languages" class="main__languages main__section">
+          <h2 class="main__title">
+            Languages:
+          </h2>
+          <ul class="languages">
+            <li class="languages__item">
+              English - Advanced (according to the online test at
+              <a href="www.EFset.org"><img src="./images/efset-logo.png" alt="Efset logo"></a>)
+            </li>
+            <li class="languages__item">
+              Russian - Native
+            </li>
+            <li class="languages__item">
+              Ukrainian - Native
+            </li>
+            <li class="languages__item">
+              Czech - Basic
+            </li>
+          </ul>
+        </section>
 
-          <h4>
+        <section id="education" class="main__languages main__section">
+          <h2 class="main__title">
+            Education:
+          </h2>
+          <ul class="languages">
+            <li class="languages__item">
+              National Aviation University | Bachelor | 2018
+            </li>
+            <li class="languages__item">
+              National Aviation University | Bachelor | 2022
+            </li>
+          </ul>
+        </section>
+
+        <section id="code" class="main__code code main__section">
+          <h2 class="main__title">
+            Code Example:
+          </h2>
+
+          <h3>
             Convert an array of strings to array of numbers
-          </h4>
+          </h3>
 
           <p class="code__task">
             Oh no! Some really funny web dev gave you a sequence of
@@ -133,25 +171,24 @@
               </pre>
         </section>
 
-        <section id="languages" class="main__languages main__section">
-          <h3 class="main__title">
-            Languages:
-          </h3>
-          <ul class="languages">
-            <li class="languages__item">
-              English - Advanced (according to the online test at
-              <a href="www.EFset.org"><img src="./images/efset-logo.png" alt="Efset logo"></a>)
-            </li>
-            <li class="languages__item">
-              Russian - Native
-            </li>
-            <li class="languages__item">
-              Ukrainian - Native
-            </li>
-            <li class="languages__item">
-              Czech - Basic
-            </li>
-          </ul>
+        <section id="projects" class="main__code code main__section">
+          <h2 class="main__title">
+            Done Projects:
+          </h2>
+          <div class="projects-item">
+            <a href="https://dominosl.github.io/rsschool-cv/" class="projects-item__link">
+              <div >
+                <img
+                  class="projects-item__image"
+                  src="./images/cv.png"
+                  alt="CV project"
+                >
+              </div>
+              <div class="projects-item__text">
+                My CV project for a RSSchool course.
+              </div>
+            </a>
+          </div>
         </section>
       </div>
     </main>
@@ -159,7 +196,7 @@
     <footer class="footer">
       <div class="container footer__container">
         <p class="footer__link">&#169; 2025</p>
-        <a class="footer__link" href="https://github.com/DominoSl">DominoSl</a>
+        <a class="footer__link footer__link--git" href="https://github.com/DominoSl">DominoSl</a>
         <a class="footer__link" href="https://rs.school/courses/javascript-ru">
           <img class="footer__image" src="./images/logo-rsschool.png" alt="RsSchool logo">
         </a>
